Alignment issued fixed in progress section

--- a/css/style.css
+++ b/css/style.css
@@ -754,6 +754,10 @@ button:hover {
         height: 50%;
     }
 
+    .d-flex {
+        gap: 0rem;
+    }
+
     #road-map .d-grid {
         display: grid;
     }
